--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-    <div id="app">aaa</div>
-    <script>
-      // You can also require other files to run in this process
-      require('./renderer.js')
-    </script>
-  </body>
+
+<head>
+    <!-- <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+</head>
+
+<body>
+    <!-- オプション画面作りたい 
+        <div>
+        <div>文字サイズ
+            <input type="range" value="1" min="1" max="10" step="1" oninput="document.getElementById('output1').value=this.value">
+
+            <output id="output1">1</output>
+        </div>
+        <div>色
+            <input type="range" value="1" min="1" max="10" step="1" oninput="document.getElementById('output2').value=this.value">
+
+            <output id="output2">1</output>
+        </div>
+        <div>速さ
+            <input type="range" value="1" min="1" max="10" step="1" oninput="document.getElementById('output3').value=this.value">
+
+            <output id="output3">1</output>
+        </div>
+        <div>test</div>
+        <div></div>
+    </div> -->
+    <div>
+        <!-- スタート・ストップの画面を作りたい -->
+        start
+    </div>
+
+    </body>
+
 </html>
