コメント整理

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <!-- オプション画面作りたい 
+<!-- 
+        オプション画面作りたい 
         <div>
         <div>文字サイズ
             <input type="range" value="1" min="1" max="10" step="1" oninput="document.getElementById('output1').value=this.value">
@@ -29,7 +30,8 @@
         </div>
         <div>test</div>
         <div></div>
-    </div> -->
+    </div> 
+-->
     <div>
         <!-- スタート・ストップの画面を作りたい -->
         start
